stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Addresses__c/xDO_MDC_Unified_Addresses__c.object-meta.xml
<CustomObject>
    <label>Unified Address</label>
    <nameField>
        <label>Unified Addresses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unified Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>