stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Addresses__c/fields/xDO_MDC_Address__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>