stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Addresses__c/fields/xDO_MDC_City__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>