stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Addresses__c/fields/xDO_MDC_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>