stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Addresses__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>xDO_MDC_City__c</columns>
    <columns>xDO_MDC_Address__c</columns>
    <columns>xDO_MDC_Country__c</columns>
    <columns>xDO_MDC_State__c</columns>
    <columns>xDO_MDC_Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>